# KennethLM

./: .cookiecutter.json  .cruft.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  create_dataset.ipynb  pyproject.toml
.github/workflows/: release.yml
src/: templates.py
src/kennethlm/: train.py
tests/: __init__.py
