[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "KennethLM"
version = "0.1.0"
authors = [
  {name = "Kenneth Enevoldsen", email = "kennethcenevoldsen@cas.au.dk"}
]
description = "Kennethlm"
classifiers = [
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10"
]
requires-python = ">=3.9"
dependencies = [
  "datasets>=2.11.0,<2.15.0",
  "torch>=2.0.0",
  "pydantic>=1.8.2,<3.0.0",

]

[project.license]
file = "LICENSE"
name = "MIT"
[project.optional-dependencies]
dev = [
  "cruft",
  "mypy",
  "pre-commit==3.3.3",
  "ruff==0.0.282", # important that these match the pre-commit hooks
  "black[jupyter]==23.7.0", # important that these match the pre-commit hooks
]
tests = [
  "pytest>=7.1.3,<7.5.0",
  "pytest-cov>=3.0.0,<4.2.0",
  "pytest-xdist>=3.0.0,<3.4.0",
  "pytest-instafail>=0.4.2,<0.6.0",
]
docs = [
  "sphinx>=5.3.0,<7.2.0",
  "furo>= 2022.12.7,< 2023.7.27",
  "sphinx-copybutton>=0.5.1,<0.5.3",
  "sphinxext-opengraph>=0.7.3,<0.8.3",
  "sphinx_design>=0.3.0,<0.5.1",
  "myst-nb>=0.6.0,<1.17.0",
  "sphinx_togglebutton>=0.2.3,<0.4.0"
]
tutorials = [
  "jupyter>=1.0.0,<1.1.0"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/kennethenevoldsen/KennethLM"
repository = "https://github.com/kennethenevoldsen/KennethLM"
documentation = "https://kennethenevoldsen.github.io/KennethLM/"

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
warn_unreachable = true
plugins = "pydantic.mypy"

[tool.pydantic-mypy]
init_typed = true
warn_untyped_fields = true

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "C4",
  "COM",
  "D417",
  "E",
  "ERA",
  "F",
  "I",
  "ICN",
  "NPY001",
  "PD002",
  "PIE",
  "PLE",
  "PLW",
  "PT",
  "UP",
  "Q",
  "PTH",
  "RSE",
  "RET",
  "RUF",
  "SIM",
  "W"
]
ignore = [
  "ANN101",
  "ANN401",
  "E402",
  "E501",
  "F401",
  "F841",
  "RET504"
]
ignore-init-module-imports = true
# Allow autofix for all enabled rules (when `--fix`) is provided.
unfixable = ["ERA"]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "__init__.py"
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py39"

[tool.ruff.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.isort]
known-third-party = ["wandb"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.semantic_release]
branch = "main"
version_variable = [
  "pyproject.toml:version"
]
upload_to_pypi = false
upload_to_release = true
build_command = "python -m pip install build; python -m build"

[tool.setuptools]
include-package-data = true
